--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
         .form-group button {
             width: 100%;
             padding: 10px;
-            background-color: #4caf50;
+            background-color: #2c3e50; /*Cambio de color*/
             color: #fff;
             border: none;
             border-radius: 4px;
