--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
         }
 
         .form-group button:hover {
-            background-color: #45a049;
+            background-color: #202020;
         }
     </style>
 </head>
