--- a/index.html
+++ b/index.html
@@ -30,5 +30,11 @@
     <title>Index</title>
 </head>
     <p><a href="login.html">Iniciar sesión</a>.</p>
+        <style>
+        body {
+            margin-bottom: 5px;
+        }
+        </style>
+  
 </body>
 </html>
