--- a/login.html
+++ b/login.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <script src="login.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
@@ -64,12 +63,12 @@
     </style>
 </head>
 <body>
-    <div class="login-container">
+    <div class="login-container" id="login-section">
         <h2>Login</h2>
         <form>
             <div class="form-group">
-                <label for="username">Usuario:</label>
-                <input type="text" id="username" name="username" required>
+                <label for="email">Correo Electrónico:</label>
+                <input type="email" id="email" name="email" required>
             </div>
             <div class="form-group">
                 <label for="password">Contraseña:</label>
@@ -80,5 +79,8 @@
             </div>
         </form>
     </div>
+
+    <script src="login.js"></script>
 </body>
+</html>
 </html>
