--- a/list.html
+++ b/list.html
@@ -1,44 +1,44 @@
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE html>   
+<html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rick y Morty</title>
 </head>
-
 <body>
-  <div class="container">
-    <div class="row justify-content-center my-5">
-      <div class="col-4">
-        <div class="d-grid gap-2">
-          <button class="btn btn-primary" type="button">Add item</button>
-          <button class="btn btn-light" type="button">Clear all</button>
-        </div>
-      </div>
-    </div>
-    <div class="row justify-content-center my-5">
-      <div class="col-4">
-        <ol class="list-group" id="my-list">
-        </ol>
-      </div>
-    </div>
-  </div>
-  <template id="list-template">
-    <li class="list-group-item d-flex justify-content-between align-items-start">
-      <div class="ms-2 me-auto">
-        <div class="fw-bold" data-id="title"></div>
-        <span data-id="content"></span>
-      </div>
-      <span class="badge bg-primary rounded-pill" data-id="number">14</span>
-    </li>
-  </template>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-  <script src="list.js"></script>
-</body>
+    <h1>Lista de personajes Rick y Morty</h1>
+    <button onclick="mostrarTodos()">Mostrar Todos</button>
+    <button onclick="mostrarLista()">Mostrar Lista</button>
+    <button onclick="agregarPersonaje()">Agregar Personaje</button>
+    <button onclick="borrarLista()">Borrar Lista</button>
+    <ul id="personajes" style="display: none;"></ul>
 
+    <script>
+        function mostrarTodos() {
+            // Aquí colocarías la lógica para mostrar todos los personajes
+        }
+
+        function mostrarLista() {
+            var lista = document.getElementById("personajes");
+            lista.style.display = "block";
+        }
+
+        function agregarPersonaje() {
+            var nombre = prompt("Ingrese el nombre del personaje:");
+            if (nombre) {
+                var lista = document.getElementById("personajes");
+                var nuevoItem = document.createElement("li");
+                nuevoItem.textContent = nombre;
+                lista.appendChild(nuevoItem);
+            }
+        }
+
+        function borrarLista() {
+            var lista = document.getElementById("personajes");
+            while (lista.firstChild) {
+                lista.removeChild(lista.firstChild);
+            }
+        }
+    </script>
+</body>
 </html>
