--- a/test.html
+++ b/test.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rick and Morty Character Search</title>
+    <title>Buscador</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Rick and Morty Character Search</h1>
+    <h1>Buscador de Personajes de Rick & Morty/h1>
     <input type="text" id="searchInput" placeholder="Enter character name">
     <button onclick="searchCharacters()">Search</button>
 
