--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Buscador de Personajes de Rick & Morty/h1>
+    <h1>Buscador de Personajes de Rick & Morty</h1>
     <input type="text" id="searchInput" placeholder="Enter character name">
     <button onclick="searchCharacters()">Search</button>
 
