--- a/test.html
+++ b/test.html
@@ -38,7 +38,7 @@
                     <p>ID: ${character.id}</p>
                     <p>Status: ${character.status}</p>
                     <img src="${character.image}" alt="${character.name}">
-                    <p>Episode: ${getEpisodeInfo(character.episode[0])}</p>
+                    <p>Episode: ${getEpisodeNumber(character.episode[0])}</p>
                 `;
                 if (character.origin) {
                     characterDiv.innerHTML += `<p>Origin: ${character.origin.name}</p>`;
@@ -57,11 +57,8 @@
             resultsContainer.appendChild(pagination);
         }
 
-        function getEpisodeInfo(episodeUrl) {
-            const episodeParts = episodeUrl.split('/');
-            const season = episodeParts[episodeParts.length - 2];
-            const episode = episodeParts[episodeParts.length - 1];
-            return `Season ${season}, Episode ${episode}`;
+        function getEpisodeNumber(episodeUrl) {
+            return episodeUrl.split('/').pop(); // Obtiene el último segmento de la URL (número de episodio)
         }
 
         function nextPage() {
