--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rick and Morty Character Search</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Rick and Morty Character Search</h1>
@@ -35,7 +35,10 @@
                 characterDiv.classList.add('character');
                 characterDiv.innerHTML = `
                     <h2>${character.name}</h2>
-                    <p class="status">Status: ${character.status}</p>
+                    <p class="status">
+                        <span class="status-circle ${getStatusColorClass(character.status)}"></span>
+                        Status: ${character.status}
+                    </p>
                     <img src="${character.image}" alt="${character.name}">
                 `;
                 if (character.origin) {
@@ -53,6 +56,16 @@
                 pagination.innerHTML += `<button onclick="nextPage()">Next</button>`;
             }
             resultsContainer.appendChild(pagination);
+        }
+
+        function getStatusColorClass(status) {
+            if (status === 'Alive') {
+                return 'status-alive';
+            } else if (status === 'Dead') {
+                return 'status-dead';
+            } else {
+                return 'status-unknown';
+            }
         }
 
         function nextPage() {
