--- a/test.html
+++ b/test.html
@@ -61,7 +61,7 @@
             } else if (status === 'Dead') {
                 return `<span class="status-dead">${status}</span>`;
             } else {
-                return `<span class="status-unknown">${status}</span>`;
+                return `<span class="status-unknown">Unknown</span>`;
             }
         }
 
