--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rick and Morty Character Search</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Rick and Morty Character Search</h1>
@@ -36,6 +36,7 @@
                 characterDiv.innerHTML = `
                     <h2>${character.name}</h2>
                     <p class="status">${highlightStatus(character.status)}</p>
+                    <p>Episodes: ${character.episode.join(', ')}</p>
                     <img src="${character.image}" alt="${character.name}">
                 `;
                 if (character.origin) {
