--- a/test.html
+++ b/test.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rick and Morty Character Search</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Rick and Morty Character Search</h1>
-    <input type="text" id="searchInput" placeholder="Enter character name">
-    <button onclick="searchCharacters()">Search</button>
+    <div class="search-container">
+        <input type="text" id="searchInput" placeholder="Enter character name">
+        <button onclick="searchCharacters()">Search</button>
+    </div>
 
     <div id="results" class="results">
         <!-- Resultados de búsqueda se mostrarán aquí -->
