--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
     </div>
 
     <div id="pagination" class="pagination">
-        <!-- Paginación se mostrará aquí -->
+        
     </div>
 
     <script>
@@ -46,9 +46,11 @@
                     <h2>${character.name}</h2>
                     <p class="status">${highlightStatus(character.status)}</p>
                     <p>Episode: ${getFirstEpisode(character.episode)}</p>
-                    <p>Origin: ${character.origin ? character.origin.name : 'Unknown'}</p>
                     <img src="${character.image}" alt="${character.name}">
                 `;
+                if (character.origin) {
+                    characterDiv.innerHTML += `<p>Origin: ${character.origin.name}</p>`;
+                }
                 resultsContainer.appendChild(characterDiv);
             });
 
