--- a/test.html
+++ b/test.html
@@ -28,6 +28,8 @@
         const maxButtons = 5;
 
         function searchCharacters() {
+            // Resetear la página a 1 al realizar una búsqueda
+            page = 1;
             const searchQuery = document.getElementById('searchInput').value.trim();
 
             fetch(`https://rickandmortyapi.com/api/character/?name=${searchQuery}&page=${page}`)
@@ -47,7 +49,7 @@
                     <p class="status">${highlightStatus(character.status)}</p>
                     <p>Episode: ${getFirstEpisode(character.episode)}</p>
                     <img src="${character.image}" alt="${character.name}">
-                    <p>${character.origin ? character.origin.name : 'Unknown'}</p> <!-- Condición para mostrar el origen o "Unknown" -->
+                    <p>${character.origin ? character.origin.name : 'Unknown'}</p>
                 `;
                 resultsContainer.appendChild(characterDiv);
             });
