--- a/test.html
+++ b/test.html
@@ -4,14 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rick and Morty Character Search</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Rick and Morty Character Search</h1>
-    <div class="search-container">
-        <input type="text" id="searchInput" placeholder="Enter character name">
-        <button onclick="searchCharacters()">Search</button>
+  <div class="container">
+    <div class="row justify-content-center my-5">
+      <div class="col-4">
+        <form id="validationForm">
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="email1" aria-describedby="emailHelp">
+            <div id="validationServer03Feedback" class="invalid-feedback">
+              Invalid email.
+            </div>
+            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password1">
+            <div id="validationServer03Feedback" class="invalid-feedback">
+              Invalid password.
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
     </div>
+  </div>
+
+    <h1>Rick and Morty Character Search</h1>
 
     <div id="results" class="results">
 
@@ -21,6 +43,13 @@
         
     </div>
 
+    <div class="search-container">
+        <input type="text" id="searchInput" placeholder="Enter character name">
+        <button onclick="searchCharacters()">Search</button>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="js/login.js"></script>
     <script>
         let page = 1;
         let totalPages = 0;
