--- a/test.html
+++ b/test.html
@@ -11,29 +11,25 @@
   <div class="container">
     <div class="row justify-content-center my-5">
       <div class="col-4">
-        <form id="validationForm">
-          <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="email1" aria-describedby="emailHelp">
-            <div id="validationServer03Feedback" class="invalid-feedback">
-              Invalid email.
-            </div>
-            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-          </div>
-          <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password1">
-            <div id="validationServer03Feedback" class="invalid-feedback">
-              Invalid password.
-            </div>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+        <div class="d-grid gap-2">
+          <button class="btn btn-primary" type="button" onclick="addItem()">Add item</button>
+          <button class="btn btn-light" type="button" onclick="clearAll()">Clear all</button>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center my-5">
+      <div class="col-4">
+        <ol class="list-group" id="my-list">
+        </ol>
       </div>
     </div>
   </div>
-
+  
     <h1>Rick and Morty Character Search</h1>
+    <div class="search-container">
+        <input type="text" id="searchInput" placeholder="Enter character name">
+        <button onclick="searchCharacters()">Search</button>
+    </div>
 
     <div id="results" class="results">
 
@@ -43,13 +39,6 @@
         
     </div>
 
-    <div class="search-container">
-        <input type="text" id="searchInput" placeholder="Enter character name">
-        <button onclick="searchCharacters()">Search</button>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="js/login.js"></script>
     <script>
         let page = 1;
         let totalPages = 0;
@@ -161,10 +150,17 @@
                 .then(data => displayResults(data));
         }
 
+        function addItem() {
+            // Aquí va la lógica para agregar un elemento
+        }
+
+        function clearAll() {
+            // Aquí va la lógica para borrar todos los elementos
+        }
+
         window.onload = function() {
             searchCharacters();
         };
     </script>
 </body>
 </html>
-
