--- a/test.html
+++ b/test.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rick and Morty Character Search</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-  <div class="container">
+
+    <div class="container">
     <div class="row justify-content-center my-5">
       <div class="col-4">
         <div class="d-grid gap-2">
-          <button class="btn btn-primary" type="button" onclick="addItem()">Add item</button>
-          <button class="btn btn-light" type="button" onclick="clearAll()">Clear all</button>
+          <button class="btn btn-primary" type="button">Add item</button>
+          <button class="btn btn-light" type="button">Clear all</button>
         </div>
       </div>
     </div>
@@ -24,7 +26,21 @@
       </div>
     </div>
   </div>
-  
+  <template id="list-template">
+    <li class="list-group-item d-flex justify-content-between align-items-start">
+      <div class="ms-2 me-auto">
+        <div class="fw-bold" data-id="title"></div>
+        <span data-id="content"></span>
+      </div>
+      <span class="badge bg-primary rounded-pill" data-id="number">14</span>
+    </li>
+  </template>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script src="js/list.js"></script>
+
+    
     <h1>Rick and Morty Character Search</h1>
     <div class="search-container">
         <input type="text" id="searchInput" placeholder="Enter character name">
@@ -148,14 +164,6 @@
             fetch(`https://rickandmortyapi.com/api/character/?name=${searchQuery}&page=${page}`)
                 .then(response => response.json())
                 .then(data => displayResults(data));
-        }
-
-        function addItem() {
-            // Aquí va la lógica para agregar un elemento
-        }
-
-        function clearAll() {
-            // Aquí va la lógica para borrar todos los elementos
         }
 
         window.onload = function() {
