--- a/test.html
+++ b/test.html
@@ -14,8 +14,8 @@
     <div class="row justify-content-center my-5">
       <div class="col-4">
         <div class="d-grid gap-2">
-          <button class="btn btn-primary" type="button">Add item</button>
-          <button class="btn btn-light" type="button">Clear all</button>
+          <button class="btn btn-primary btn-block" type="button">Add item</button>
+          <button class="btn btn-light btn-block" type="button">Clear all</button>
         </div>
       </div>
     </div>
@@ -26,21 +26,7 @@
       </div>
     </div>
   </div>
-  <template id="list-template">
-    <li class="list-group-item d-flex justify-content-between align-items-start">
-      <div class="ms-2 me-auto">
-        <div class="fw-bold" data-id="title"></div>
-        <span data-id="content"></span>
-      </div>
-      <span class="badge bg-primary rounded-pill" data-id="number">14</span>
-    </li>
-  </template>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-  <script src="js/list.js"></script>
-
-    
+  
     <h1>Rick and Morty Character Search</h1>
     <div class="search-container">
         <input type="text" id="searchInput" placeholder="Enter character name">
