--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
       <div class="col-4">
         <div class="d-grid gap-2">
           <button class="btn-primary" type="button">Add item</button>
-          <button class="btn btn-light" type="button">Clear all</button>
+          <button class="btn-light" type="button">Clear all</button>
         </div>
       </div>
     </div>
