--- a/test.html
+++ b/test.html
@@ -40,6 +40,18 @@
     crossorigin="anonymous"></script>
   <script src="js/list.js"></script>
 
+    <script>
+    // Tu nuevo código JavaScript aquí
+    // Por ejemplo:
+    const primaryButtons = document.querySelectorAll('.btn-primary');
+    primaryButtons.forEach(button => {
+        button.style.width = '200px'; // Ancho de 200px
+        button.style.textAlign = 'center'; // Centrado del texto
+        button.style.backgroundColor = 'blue'; // Color de fondo azulado
+        button.style.height = '50px'; // Altura de 50px
+    });
+</script>
+
 
     <h1>Rick and Morty Character Search</h1>
     <div class="search-container">
