--- a/test.html
+++ b/test.html
@@ -45,10 +45,10 @@
     // Por ejemplo:
     const primaryButtons = document.querySelectorAll('.btn-primary');
     primaryButtons.forEach(button => {
-        button.style.width = '200px'; // Ancho de 200px
+        button.style.width = '250px'; // Ancho de 200px
         button.style.textAlign = 'center'; // Centrado del texto
-        button.style.backgroundColor = 'blue'; // Color de fondo azulado
-        button.style.height = '50px'; // Altura de 50px
+        button.style.backgroundColor = '##34a1eb'; // Color de fondo azulado
+        button.style.height = '25px'; // Altura de 50px
     });
 </script>
 
