--- a/test.html
+++ b/test.html
@@ -41,16 +41,25 @@
   <script src="js/list.js"></script>
 
     <script>
-    // Tu nuevo código JavaScript aquí
-    // Por ejemplo:
     const primaryButtons = document.querySelectorAll('.btn-primary');
     primaryButtons.forEach(button => {
-        button.style.width = '275px'; // Ancho de 200px
-        button.style.textAlign = 'center'; // Centrado del texto
-        button.style.backgroundColor = '##34a1eb'; // Color de fondo azulado
-        button.style.height = '35px'; // Altura de 50px
+        button.style.width = '275px'; 
+        button.style.textAlign = 'center';
+        button.style.backgroundColor = '##34a1eb'; 
+        button.style.height = '35px'; 
     });
 </script>
+
+    <script>
+
+    const lightButtons = document.querySelectorAll('.btn-light');
+    lightButtons.forEach(button => {
+        button.style.width = '200px'; 
+        button.style.textAlign = 'center';
+        button.style.height = '50px';
+    });
+</script>
+
 
 
     <h1>Rick and Morty Character Search</h1>
