--- a/list.html
+++ b/list.html
@@ -4,34 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rick and Morty Character Search</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-  <div class="container">
+
+    <div class="container">
     <div class="row justify-content-center my-5">
       <div class="col-4">
-        <form id="validationForm">
-          <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="email1" aria-describedby="emailHelp">
-            <div id="validationServer03Feedback" class="invalid-feedback">
-              Invalid email.
-            </div>
-            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-          </div>
-          <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password1">
-            <div id="validationServer03Feedback" class="invalid-feedback">
-              Invalid password.
-            </div>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+        <div class="d-grid gap-2">
+          <button class="btn btn-primary" type="button">Add item</button>
+          <button class="btn btn-light" type="button">Clear all</button>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center my-5">
+      <div class="col-4">
+        <ol class="list-group" id="my-list">
+        </ol>
       </div>
     </div>
   </div>
+  <template id="list-template">
+    <li class="list-group-item d-flex justify-content-between align-items-start">
+      <div class="ms-2 me-auto">
+        <div class="fw-bold" data-id="title"></div>
+        <span data-id="content"></span>
+      </div>
+      <span class="badge bg-primary rounded-pill" data-id="number">14</span>
+    </li>
+  </template>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script src="js/list.js"></script>
+
+    <script>
+    const primaryButtons = document.querySelectorAll('.btn-primary');
+    primaryButtons.forEach(button => {
+        button.style.width = '345px'; 
+        button.style.textAlign = 'center';
+        button.style.backgroundColor = '##34a1eb'; 
+        button.style.height = '37px'; 
+    });
+</script>
+
+    <script>
+
+    const lightButtons = document.querySelectorAll('.btn-light');
+    lightButtons.forEach(button => {
+        button.style.width = '345px'; 
+        button.style.textAlign = 'center';
+        button.style.height = '37px';
+    });
+</script>
+
+
 
     <h1>Rick and Morty Character Search</h1>
     <div class="search-container">
@@ -47,8 +76,6 @@
         
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="js/login.js"></script>
     <script>
         let page = 1;
         let totalPages = 0;
@@ -59,7 +86,7 @@
         function searchCharacters() {
             searchQuery = document.getElementById('searchInput').value.trim();
 
-            // Si no estás en la página 1, regresa a la página 1
+            
             if (page !== 1) {
                 page = 1;
             }
