--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <title>Index</title>
 </head>
     <p><a href="login.html">Iniciar sesión</a>.</p>
+    <p><a href="register.html">Registrarse</a>.</p>
         <style>
         body {
             margin-bottom: 5px;
