--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
 </head>
-    <p><a href="login.html">Iniciar sesión</a>.</p>
-    <p><a href="register.html">Registrarse</a>.</p>
+    <p><a href="login.html">Iniciar sesión</a></p>
+    <p><a href="register.html">Registrarse</a></p>
         <style>
         body {
             margin-bottom: 5px;
