--- a/register.html
+++ b/register.html
@@ -67,6 +67,10 @@
         <h2>Registro</h2>
         <form>
             <div class="form-group">
+                <label for="name">Nombre:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
                 <label for="email">Correo Electrónico:</label>
                 <input type="email" id="email" name="email" required>
             </div>
@@ -83,4 +87,3 @@
     <script src="register.js"></script>
 </body>
 </html>
-
