--- a/register.html
+++ b/register.html
@@ -60,6 +60,18 @@
         .form-group button:hover {
             background-color: #202020;
         }
+
+        .login-link {
+            margin-top: 10px;
+            font-size: 14px;
+            color: #555;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .login-link:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -80,6 +92,9 @@
             </div>
             <div class="form-group">
                 <button type="submit">Registrarse</button>
+            </div>
+            <div class="form-group">
+                <a href="login.html" class="login-link">¿Ya tienes cuenta? Inicia sesión aquí</a>
             </div>
         </form>
     </div>
