--- a/register.html
+++ b/register.html
@@ -91,7 +91,7 @@
                 <input type="password" id="password" name="password" required>
             </div>
             <div class="form-group">
-                <button type="submit">Registrarse</button>
+                <button type="submit" onclick="registerUser()">Registrarse</button>
             </div>
             <div class="form-group">
                 <a href="login.html" class="login-link">¿Ya tienes cuenta? Inicia sesión aquí</a>
@@ -99,6 +99,25 @@
         </form>
     </div>
 
-    <script src="register.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bcryptjs/2.4.3/bcrypt.min.js"></script>
+    <script>
+        async function registerUser() {
+            const name = document.getElementById('name').value;
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+
+            // Hashear la contraseña antes de enviarla al servidor
+            const hashedPassword = await hashPassword(password);
+
+            // Aquí puedes enviar name, email y hashedPassword al servidor para el registro
+            console.log(`Nombre: ${name}, Email: ${email}, Contraseña: ${hashedPassword}`);
+        }
+
+        async function hashPassword(password) {
+            // Hash de la contraseña utilizando BCrypt
+            const saltRounds = 10; // Número de rondas de hashing (mayor es más seguro pero más lento)
+            return await bcrypt.hash(password, saltRounds);
+        }
+    </script>
 </body>
 </html>
