--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
+    <title>Login</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,7 +15,7 @@
             height: 100vh;
         }
 
-        .register-container {
+        .login-container {
             background-color: #fff;
             padding: 20px;
             border-radius: 8px;
@@ -24,7 +24,7 @@
             text-align: center;
         }
 
-        .register-container h2 {
+        .login-container h2 {
             margin-bottom: 20px;
             color: #333;
         }
@@ -50,7 +50,7 @@
         .form-group button {
             width: 100%;
             padding: 10px;
-            background-color: #303030; /*Cambio de color*/
+            background-color: #303030;
             color: #fff;
             border: none;
             border-radius: 4px;
@@ -61,23 +61,36 @@
             background-color: #202020;
         }
 
-        .login-link {
-            margin-top: 10px;
-            font-size: 14px;
-            color: #555;
-            text-decoration: none;
-            cursor: pointer;
-        }
-
-        .login-link:hover {
-            text-decoration: underline;
+        #register-message {
+            color: red;
         }
     </style>
 </head>
 <body>
-    <div class="register-container" id="register-section">
+    <div class="login-container" id="login-section">
+        <h2>Login</h2>
+        <form id="login-form">
+            <div class="form-group">
+                <label for="email">Correo Electrónico:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Contraseña:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <div class="form-group">
+                <button type="submit">Iniciar sesión</button>
+            </div>
+        </form>
+        <p id="login-message"></p>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bcryptjs/2.4.3/bcrypt.min.js"></script>
+    <script src="login.js"></script>
+
+    <div class="login-container" id="register-section">
         <h2>Registro</h2>
-        <form>
+        <form id="register-form">
             <div class="form-group">
                 <label for="name">Nombre:</label>
                 <input type="text" id="name" name="name" required>
@@ -97,38 +110,9 @@
                 <a href="login.html" class="login-link">¿Ya tienes cuenta? Inicia sesión aquí</a>
             </div>
         </form>
+        <p id="register-message"></p>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bcryptjs/2.4.3/bcrypt.min.js"></script>
-    <script>
-        async function registerUser() {
-            const name = document.getElementById('name').value;
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-
-            // Validar el nombre
-            if (!validateName(name)) {
-                document.getElementById('register-message').textContent = 'El campo de nombre debe contener solo letras y tener entre 3 y 30 caracteres.';
-                return;
-            }
-
-            // Hashe de la contraseña
-            const hashedPassword = await hashPassword(password);
-
-            // Mostrar mensaje de registro exitoso
-            document.getElementById('register-message').textContent = 'Registro exitoso.';
-        }
-
-        async function hashPassword(password) {
-            // Hash de la contraseña utilizando BCrypt
-            const saltRounds = 10;
-            return await bcrypt.hash(password, saltRounds);
-        }
-
-        function validateName(name) {
-            const nameRegex = /^[A-Za-z]{3,30}$/; 
-            return nameRegex.test(name);
-        }
-    </script>
+    <script src="register.js"></script>
 </body>
 </html>
